--- a/src/scss/layout/_main-header.scss
+++ b/src/scss/layout/_main-header.scss
@@ -1,5 +1,5 @@
 .main-header {
-   background-color: $color-background-primary;
+   background-color: $color-gray-lighter;
    min-height: 48px;
 
 }
