--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -2,13 +2,14 @@ $color-white: #ffffff;
 $color-black: #000000;
 $color-gray: #e1e1e1;
 $color-gray-light: #e6ecea;
-$color-gray-lighter: #f5f5f3;
+$color-gray-lighter: #f8f8f8;
 $color-gray-darker: #363636;
-$color-gray-dark: #555555;
-$color-blue: #0a829a;
+$color-gray-dark: #373737;
+
+$color-blue: #464b5f;
 $color-blue-dark: #04515f;
 $color-blue-darkest: #0b373f;
-$color-green-dark: #26989B;
+$color-green-dark: #0b7a7c;
 $color-red: #a71b1b;
 $color-red-light: #d20917;
 
