--- a/src/scss/common/_form.scss
+++ b/src/scss/common/_form.scss
@@ -1,31 +1,26 @@
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 100px white inset;
 }
-
 form {
   position: relative;
   margin-bottom: 20px;
 
   .error {
-
     position: absolute;
     top: 66px;
     left: 0;
     width: 100%;
     color: $color-danger;
-
   }
 
   .input-error {
     border-left: 5px solid $color-danger;
     background-color: $color-gray-lighter;
 
-    &~label {
+    & ~ label {
       top: -8px;
     }
   }
-
-
 }
 
 .form-footer {
@@ -59,7 +54,6 @@ label {
 
   &.top {
     top: 0;
-
   }
 }
 
@@ -81,14 +75,12 @@ textarea {
     background-color: $color-gray-lighter;
   }
 
-  &:focus~label {
+  &:focus ~ label {
     top: -8px;
   }
 }
 
-
-
-input[type="radio"] {
+input[type='radio'] {
   margin-right: 10px;
 }
 
@@ -106,10 +98,8 @@ fieldset {
 }
 
 .required {
-
-
   &:after {
-    content: "*";
+    content: '*';
     color: $color-danger;
 
     position: absolute;
